--- a/css/editor.css
+++ b/css/editor.css
@@ -2,12 +2,37 @@
 body {
   padding-top: 50px;
   padding-bottom: 40px;
-  margin-left: 210px !important;
   -webkit-transition: margin 500ms ease;
   -moz-transition: margin 500ms ease;
   -ms-transition: margin 500ms ease;
   -o-transition: margin 500ms ease;
   transition: margin 500ms ease; }
+
+body.edit{
+  margin-right: 210px !important;
+  padding: 5px
+}
+
+body.login{
+  margin: auto;
+  margin-top: 100px;
+  width: 50%;
+  border: 3px solid #ff9900;
+  padding: 10px;
+}
+
+body.myproject{
+  margin-top: 100px;
+}
+
+body.profile{
+  margin: auto;
+  width: 50%;
+  margin-top: 100px;
+  border: 3px solid #ff9900;
+  padding: 10px;
+}
+
 
 @media (max-width: 980px) {
   /* Enable use of floated navbar text */
@@ -63,7 +88,7 @@ body {
 .sidebar-nav {
   position: fixed;
   width: 210px;
-  left: 0px;
+  right: 0px;
   bottom: 0;
   top: 44px;
   background: #464646;
@@ -261,7 +286,7 @@ body {
 
 /* preview */
 body.devpreview {
-  margin-left: 0px; }
+  margin-right: 5px; }
 
 .devpreview .sidebar-nav {
   left: -210px;
@@ -673,3 +698,56 @@ a.language-selected {
 
 #LG {
   width: 100%; }
+
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.card {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+.shadow-sm {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+}
+
+.mb-4, .my-4 {
+  margin-bottom: 1.5rem!important;
+}
+
+.card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
+
+.d-flex {
+  display: flex!important;
+}
+
+.justify-content-between {
+  justify-content: space-between!important;
+}
+
+.align-items-center {
+  align-items: center!important;
+}
+
+.text-orange {
+  color:#ff9900
+}
+
+.center{
+  justify-content: center !important
+}
